Add tableify dependency

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "coffeeify": "^3.0.1",
+    "tableify": "^1.1.0",
     "tablesorter": "2.26",
     "watchify": "^3.11.0"
   },
